WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296986
[WPE][GTK] Warnings due to wrong format specifiers in logging statements
https://bugs.webkit.org/show_bug.cgi?id=296986
Summary
[WPE][GTK] Warnings due to wrong format specifiers in logging statements
Adrian Perez
Reported
2025-08-06 01:09:39 PDT
Building the WPE or GTK ports with Clang with -DENABLE_JOURNALD_LOG=OFF -DENABLE_RELEASE_LOG=ON produces a number of warnings related to wrong format specifiers for 64-bit integers (which should use PRIi64/PRIu64), and using os_log()-specific "%{public}s" and "%{private}s" formats that are not available outside of Darwin/Cocoa (which should use {PUBLIC,PRIVATE}_LOG_STRING).
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2025-08-06 01:17:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/49002
EWS
Comment 2
2025-08-13 12:55:19 PDT
Committed
298645@main
(e585c858661e): <
https://commits.webkit.org/298645@main
> Reviewed commits have been landed. Closing PR #49002 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-08-13 12:56:13 PDT
<
rdar://problem/158249149
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug