[WPE][GTK] Warnings due to wrong format specifiers in logging statements https://bugs.webkit.org/show_bug.cgi?id=296986

Reviewed by Justin Michaud.

Use the PUBLIC_LOG_STRING and PRIVATE_LOG_STRING macros instead of the
"%{public}s" and "%{private}s" format specifiers, which are supported
only by os_log(), but not by the other logging implementations. While
at it, replace some incorrect format specifierss with PRIu64 in places
that take uin64_t parameters.

The generate-log-declarations.py script also gets tweaked to recognize
PUBLIC_LOG_STRING and PRIVATE_LOG_STRING as valid tokens for format
strings, similarly to how the PRI* macros are also handled.

* Source/WebCore/Scripts/generate-log-declarations.py:
(get_log_messages): Recognize also {PUBLIC,PRIVATE}_LOG_STRING.
* Source/WebCore/platform/LogMessages.in:
* Source/WebCore/platform/mediastream/mac/CoreAudioSharedUnit.cpp:
(WebCore::createAudioUnit):
* Source/WebKit/NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementManager.cpp:
(WebKit::PrivateClickMeasurementManager::storeUnattributed):
(WebKit::PrivateClickMeasurementManager::getSignedUnlinkableTokenForSource):
(WebKit::PrivateClickMeasurementManager::getSignedUnlinkableTokenForDestination):
(WebKit::PrivateClickMeasurementManager::handleAttribution):
* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::sendMessage):
(IPC::Connection::sendMessageWithAsyncReply):
(IPC::Connection::waitForMessage):
(IPC::Connection::sendSyncMessage):
* Source/WebKit/Platform/IPC/StreamClientConnection.h:
(IPC::StreamClientConnection::send):
(IPC::StreamClientConnection::sendWithAsyncReply):
(IPC::StreamClientConnection::sendSync):
* Source/WebKit/Platform/LogMessages.in:
* Source/WebKit/Shared/Extensions/WebExtensionSQLiteDatabase.cpp:
(WebExtensionSQLiteDatabase::reportErrorWithCode):
* Source/WebKit/UIProcess/Model/ModelProcessProxy.cpp:
(WebKit::ModelProcessProxy::modelProcessExited):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::gpuProcessDidFinishLaunching):
* Source/WebKit/UIProcess/WebProcessCache.cpp:
(WebKit::WebProcessCache::addProcess):
(WebKit::WebProcessCache::takeProcess):
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::processDidFinishLaunching):
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::modelProcessExited):
(WebKit::WebProcessProxy::didExceedMemoryFootprintThreshold):

Canonical link: https://commits.webkit.org/298645@main